Added endpoint for user login
