# public/docs/openapi.yaml
@@ -7,28 +7,6 @@ servers:
   -
     url: 'http://localhost'
 paths:
-  /api/v1/ping:
-    get:
-      summary: ''
-      operationId: getApiV1Ping
-      description: ''
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Pong
-                properties:
-                  message:
-                    type: string
-                    example: Pong
-      tags:
-        - Endpoints
-      security: []
   /api/v1/auth/register:
     post:
       summary: ''
@@ -37,7 +15,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Auth
       requestBody:
         required: true
         content:
@@ -61,12 +39,71 @@ paths:
                   type: string
                   description: Password.
                   example: yqy5bjd7vkg@ckm5THG
+                password_confirmation:
+                  type: string
+                  description: 'Confirmation Password.'
+                  example: yqy5bjd7vkg@ckm5THG
               required:
                 - first_name
                 - last_name
                 - email
+                - password
+                - password_confirmation
+      security: []
+  /api/v1/auth/login:
+    post:
+      summary: ''
+      operationId: postApiV1AuthLogin
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'Email. Must be a valid email address.'
+                  example: john@doe
+                password:
+                  type: string
+                  description: Password.
+                  example: yqy5bjd7vkg@ckm5THG
+              required:
+                - email
+                - password
+      security: []
+  /api/v1/ping:
+    get:
+      summary: ''
+      operationId: getApiV1Ping
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Pong
+                properties:
+                  message:
+                    type: string
+                    example: Pong
+      tags:
+        - Healthcheck
       security: []
 tags:
   -
-    name: Endpoints
+    name: Auth
+    description: ''
+  -
+    name: Healthcheck
     description: ''
