# routes/v1/auth.php
@@ -3,7 +3,9 @@
 declare(strict_types=1);
 
 
+use App\Http\Controllers\V1\Auth\LoginController;
 use App\Http\Controllers\V1\Auth\RegisterController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/register', RegisterController::class)->name('register');
+Route::post('/login', LoginController::class)->name('login');
